Creating the images folder for the products section

--- a/E-commerce screen/index.html
+++ b/E-commerce screen/index.html
@@ -6,6 +6,24 @@
     <title>Cool Store</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>Bag</li>
+            <li>Payment</li>
+            <li>Confirmation</li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Products</h1>
+        <section>
+            <ul>
+                <li></li>
+            </ul>
+        </section>
+        <section>
+            <li></li>
+        </section>
+    </main>
 </body>
 </html>
