The items were created, as well as their respective prices

--- a/E-commerce screen/index.html
+++ b/E-commerce screen/index.html
@@ -18,7 +18,21 @@
         <h1>Products</h1>
         <section>
             <ul>
-                <li></li>
+                <li>
+                    <img src="Pictures/Item 1.png" alt="L'Oréal Professionnel Expert Absolut Repair Cortex Lipidium">
+                    <span>L'Oréal Professionnel Expert Absolut Repair Cortex Lipidium</span>
+                    <b>R$ 225,90</b>
+                </li>
+                <li>
+                    <img src="Pictures/Item 2.png" alt="Good Girl Carolina Herrera Eau de Parfum - Perfume Feminino 30ml">
+                    <span>Good Girl Carolina Herrera Eau de Parfum - Perfume Feminino 30ml</span>
+                    <b>R$ 299,00</b>
+                </li>
+                <li>
+                    <img src="Pictures/Item 3.png" alt="Senscience Inner Restore Intensif - Máscara Capilar 50ml">
+                    <span>Senscience Inner Restore Intensif - Máscara Capilar 50ml</span>
+                    <b>R$ 99,90</b>
+                </li>
             </ul>
         </section>
         <section>
