Values ​​section created

--- a/E-commerce screen/index.html
+++ b/E-commerce screen/index.html
@@ -36,7 +36,25 @@
             </ul>
         </section>
         <section>
-            <li></li>
+            <ul>
+                <li>
+                    <h5>Products</h5>
+                    <span>R$ 624,80</span>
+                </li>
+                <li>
+                    <h5>Freight</h5>
+                    <span>R$ 5,30</span>
+                </li>
+                <li>
+                    <h5>Discount</h5>
+                    <span>R$ 30,00</span>
+                </li>
+                <li>
+                    <h5>Total</h5>
+                    <span>R$ 600,10</span>
+                </li>
+            </ul>
+            <button>Proceed to Payment</button>
         </section>
     </main>
 </body>
