Starting the screen styling

--- a/E-commerce screen/index.html
+++ b/E-commerce screen/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Cool Store</title>
 </head>
 <body>
     <nav>
         <ul>
-            <li>Bag</li>
+            <li class="active">Bag</li>
             <li>Payment</li>
             <li>Confirmation</li>
         </ul>
@@ -17,45 +18,48 @@
     <main>
         <h1>Products</h1>
         <section>
-            <ul>
-                <li>
-                    <img src="Pictures/Item 1.png" alt="L'Oréal Professionnel Expert Absolut Repair Cortex Lipidium">
-                    <span>L'Oréal Professionnel Expert Absolut Repair Cortex Lipidium</span>
-                    <b>R$ 225,90</b>
-                </li>
-                <li>
-                    <img src="Pictures/Item 2.png" alt="Good Girl Carolina Herrera Eau de Parfum - Perfume Feminino 30ml">
-                    <span>Good Girl Carolina Herrera Eau de Parfum - Perfume Feminino 30ml</span>
-                    <b>R$ 299,00</b>
-                </li>
-                <li>
-                    <img src="Pictures/Item 3.png" alt="Senscience Inner Restore Intensif - Máscara Capilar 50ml">
-                    <span>Senscience Inner Restore Intensif - Máscara Capilar 50ml</span>
-                    <b>R$ 99,90</b>
-                </li>
-            </ul>
+            <section>
+                <ul>
+                    <li>
+                        <img src="Pictures/Item 1.png" alt="L'Oréal Professionnel Expert Absolut Repair Cortex Lipidium">
+                        <span>L'Oréal Professionnel Expert Absolut Repair Cortex Lipidium</span>
+                        <b>R$ 225,90</b>
+                    </li>
+                    <li>
+                        <img src="Pictures/Item 2.png" alt="Good Girl Carolina Herrera Eau de Parfum - Perfume Feminino 30ml">
+                        <span>Good Girl Carolina Herrera Eau de Parfum - Perfume Feminino 30ml</span>
+                        <b>R$ 299,00</b>
+                    </li>
+                    <li>
+                        <img src="Pictures/Item 3.png" alt="Senscience Inner Restore Intensif - Máscara Capilar 50ml">
+                        <span>Senscience Inner Restore Intensif - Máscara Capilar 50ml</span>
+                        <b>R$ 99,90</b>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <ul>
+                    <li>
+                        <h5>Products</h5>
+                        <span>R$ 624,80</span>
+                    </li>
+                    <li>
+                        <h5>Freight</h5>
+                        <span>R$ 5,30</span>
+                    </li>
+                    <li>
+                        <h5>Discount</h5>
+                        <span>R$ 30,00</span>
+                    </li>
+                    <li>
+                        <h5>Total</h5>
+                        <span>R$ 600,10</span>
+                    </li>
+                </ul>
+                <button>Proceed to Payment</button>
+            </section>
         </section>
-        <section>
-            <ul>
-                <li>
-                    <h5>Products</h5>
-                    <span>R$ 624,80</span>
-                </li>
-                <li>
-                    <h5>Freight</h5>
-                    <span>R$ 5,30</span>
-                </li>
-                <li>
-                    <h5>Discount</h5>
-                    <span>R$ 30,00</span>
-                </li>
-                <li>
-                    <h5>Total</h5>
-                    <span>R$ 600,10</span>
-                </li>
-            </ul>
-            <button>Proceed to Payment</button>
-        </section>
+  
     </main>
 </body>
 </html>
