Starting the styling of the main and its sections

--- a/E-commerce screen/index.html
+++ b/E-commerce screen/index.html
@@ -17,8 +17,8 @@
 
     <main>
         <h1>Products</h1>
-        <section>
-            <section>
+        <section id="panel">
+            <section id="left">
                 <ul>
                     <li>
                         <img src="Pictures/Item 1.png" alt="L'Oréal Professionnel Expert Absolut Repair Cortex Lipidium">
@@ -37,7 +37,7 @@
                     </li>
                 </ul>
             </section>
-            <section>
+            <section id="right">
                 <ul>
                     <li>
                         <h5>Products</h5>
