--- a/E-commerce screen/index.html
+++ b/E-commerce screen/index.html
@@ -48,12 +48,12 @@
                         <span>R$ 5,30</span>
                     </li>
                     <li>
-                        <h5>Discount</h5>
+                        <h5 class="discount">Discount</h5>
                         <span>R$ 30,00</span>
                     </li>
                     <li>
-                        <h5>Total</h5>
-                        <span>R$ 600,10</span>
+                        <h5 class="total">Total</h5>
+                        <span class="total">R$ 600,10</span>
                     </li>
                 </ul>
                 <button>Proceed to Payment</button>
