--- a/E-commerce screen 2/index.html
+++ b/E-commerce screen 2/index.html
@@ -6,6 +6,34 @@
     <title>Cool Store</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>Bag</li>
+            <li class="active">Payment</li>
+            <li>Confirmation</li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Payment</h1>
+        <section>
+            <form>
+                <label>Credit Card Number</label>
+                <input type="text">
+                <label>Cardholder Name</label>
+                <input type="text" placeholder="As on the card">
+                <div>
+                    <div>
+                        <label>Validity (month/year)</label>
+                        <input type="text">
+                    </div>
+                    <div>
+                        <label>CVV:</label>
+                        <input type="number">
+                    </div>
+                </div>
+            </form>
+        </section>
+        <section></section>
+    </main>
 </body>
 </html>
