PNG folder modifications and creation

--- a/E-commerce screen 2/index.html
+++ b/E-commerce screen 2/index.html
@@ -16,24 +16,48 @@
     <main>
         <h1>Payment</h1>
         <section>
-            <form>
-                <label>Credit Card Number</label>
-                <input type="text">
-                <label>Cardholder Name</label>
-                <input type="text" placeholder="As on the card">
-                <div>
+            <section>
+                <form>
+                    <label>Credit Card Number</label>
+                    <input type="text">
+                    <label>Cardholder Name</label>
+                    <input type="text" placeholder="As on the card">
                     <div>
-                        <label>Validity (month/year)</label>
-                        <input type="text">
+                        <div>
+                            <label>Validity (month/year)</label>
+                            <input type="text">
+                        </div>
+                        <div>
+                            <label>CVV:</label>
+                            <input type="number">
+                        </div>
                     </div>
-                    <div>
-                        <label>CVV:</label>
-                        <input type="number">
-                    </div>
-                </div>
-            </form>
+                </form>
+                <img src="Pictures/card.png">
+            </section>
+
+            <section>
+                <ul>
+                    <li>
+                        <h5>Products</h5>
+                        <span>R$ 624,80</span>
+                    </li>
+                    <li>
+                        <h5>Freight</h5>
+                        <span>R$ 5,30</span>
+                    </li>
+                    <li>
+                        <h5>Discount</h5>
+                        <span>R$ 30,00</span>
+                    </li>
+                    <li>
+                        <h5>Total</h5>
+                        <span>R$ 600,10</span>
+                    </li>
+                </ul>
+                <button>Proceed to Payment</button>
+            </section>
         </section>
-        <section></section>
     </main>
 </body>
 </html>
