Finalizing the styling of payment information

--- a/E-commerce screen 2/index.html
+++ b/E-commerce screen 2/index.html
@@ -15,29 +15,29 @@
         </ul>
     </nav>
     <main>
-        <h1>Payment</h1>
-        <section>
-            <section>
+        <h2>Products</h2>
+        <section id="princ">
+            <section id="left">
                 <form>
                     <label>Credit Card Number</label>
                     <input type="text">
                     <label>Cardholder Name</label>
                     <input type="text" placeholder="As on the card">
-                    <div>
-                        <div>
-                            <label>Validity (month/year)</label>
+                    <div id="security">
+                        <div id="validity">
+                            <label>Validity (month/year):</label>
                             <input type="text">
                         </div>
-                        <div>
+                        <div id="cvv">
                             <label>CVV:</label>
-                            <input type="number">
+                            <input type="text">
                         </div>
                     </div>
                 </form>
                 <img src="Pictures/card.png">
             </section>
 
-            <section>
+            <section id="right">
                 <ul>
                     <li>
                         <h5>Products</h5>
