--- a/E-commerce screen 2/index.html
+++ b/E-commerce screen 2/index.html
@@ -51,7 +51,7 @@
                         <h5>Discount</h5>
                         <span>R$ 30,00</span>
                     </li>
-                    <li>
+                    <li class="total">
                         <h5>Total</h5>
                         <span>R$ 600,10</span>
                     </li>
